# llm-router

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: project-map.md  use-cases.md
examples/: README.md  basic.py  role_tiers.py
src/llm_router/: __init__.py  budget.py  client.py
tests/: test_budget.py  test_client.py
