[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-router"
version = "0.1.0"
description = "Cost-aware multi-provider LLM router with role tiers (cheap/mid/chief/audit)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "krivonosoff161" }]
keywords = ["llm", "openai", "router", "agents", "cost", "qwen", "yandex"]
dependencies = ["aiohttp>=3.9"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/krivonosoff161/llm-router"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
